register component modified

--- a/src/components/Register/Register.module.css
+++ b/src/components/Register/Register.module.css
@@ -1,4 +1,9 @@
-.register{
+/* .register{
     color: bisque;
     background-color: azure;
+} */
+
+.inputContainer {
+    width: 400px;
+    margin: 20px;
 }
