--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -1,7 +1,12 @@
+
+.inputContainer {
+    width: 400px;
+    margin: 20px;
+}
 .loginbtn{
     display: flex;
     margin-top: 40px;
-
+margin-left: 100px;
 }
 
 .button {
@@ -25,8 +30,3 @@
     font-family: sans-serif;
     margin-left: 12px;
   }
-
-.inputContainer {
-    width: 400px;
-    margin: 20px;
-}
