--- a/src/components/Register/Register.module.css
+++ b/src/components/Register/Register.module.css
@@ -1,28 +1,10 @@
-/* .register{
-    color: bisque;
-    background-color: azure;
-} */
-
 .inputContainer {
     width: 400px;
     margin: 20px;
 }
 .loginbtn{
     display: flex;
+    justify-content: center;
+    align-items: center;
     margin-top: 40px;
-margin-left: 150px;
 }
-
-.button {
-    background-color: #008CBA;
-    border: none;
-    color: white;
-    border-radius: 10px;
-    padding: 8px 34px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 20px;
-    cursor: pointer;
-
-  }
