--- a/src/components/Register/Register.module.css
+++ b/src/components/Register/Register.module.css
@@ -2,7 +2,8 @@
     width: 400px;
     margin: 20px;
 }
-.loginbtn{
+
+.btnContainer{
     display: flex;
     justify-content: center;
     align-items: center;
