--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.Container {
-  /* background-color: #fff; */
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.App {
+  /* border: 2px solid green; */
 }
