--- a/src/pages/Register/Register.module.css
+++ b/src/pages/Register/Register.module.css
@@ -1,17 +1,18 @@
+.mainContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .inputContainer {
     width: 400px;
     margin: 10px;
 }
-.loginbtn{
+
+.btnContainer{
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 40px;
-}
-
-.forgetpassword{
-    color: white;
-    cursor: pointer;
-    font-family: sans-serif;
-    margin-left: 20px;
 }
