--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 }
 
 body {
-  margin: 0;
-  background-color: #152733;
+background-image: url(./image/output-onlinepngtools\ \(2\).png);
+background-repeat: no-repeat;
+background-size:cover;
 }
