--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -5,3 +5,9 @@
     align-items: center;
     padding: 20px 50px;
 }
+.logo img{
+    width: 90px;
+    left: 50px;
+    position:absolute;
+    top: 15px;
+}
