--- a/src/pages/Home/components/AnimatedText2/AnimatedText2.module.css
+++ b/src/pages/Home/components/AnimatedText2/AnimatedText2.module.css
@@ -67,13 +67,13 @@ p {
   @keyframes text-animation {
     0% {margin-top: 0;}
     10% {margin-top: 0;}
-    20% {margin-top: -11.62rem;}
-    30% {margin-top: -11.62rem;}
-    40% {margin-top: -27.24rem;}
+    20% {margin-top: -11rem;}
+    30% {margin-top: -11rem;}
+    40% {margin-top: -38.24rem;}
     60% {margin-top: -12rem;}
     70% {margin-top: -12rem;}
-    80% {margin-top: -16rem;}
-    90% {margin-top: -18rem;}
-    100% {margin-top: -20rem;}
+    80% {margin-top: -25rem;}
+    90% {margin-top: -1rem;}
+    100% {margin-top: 0;}
   }
   
