--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 }
 
 body {
-background-image: url(./image/output-onlinepngtools\ \(2\).png);
+background-image: url(./image/6057271.jpg);
 background-repeat: no-repeat;
 background-size:cover;
 }
