--- a/src/pages/Home/components/AnimatedText/AnimatedText.module.css
+++ b/src/pages/Home/components/AnimatedText/AnimatedText.module.css
@@ -2,14 +2,19 @@
 margin-top: 250px;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
+  text-align: center;
+
   /* border: 2px solid purple; */
 }
 
 .text {
   /* border: 2px solid orange; */
-  margin-left: 100px;
+  background-color: rgba(131, 131, 131, 0.2);
   font-size: 28px;
-  color: white;
+  text-align: center;
+  font-family: sans-serif;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
   text-transform: uppercase;
 }
