--- a/src/components/MyVideos/MyVideos.module.css
+++ b/src/components/MyVideos/MyVideos.module.css
@@ -17,3 +17,37 @@
 .active {
     color: #fff;
 }
+.table{
+    color: #fff;
+    display:flex;
+    justify-content: center;
+align-items: center;
+padding-top: 40px;
+padding-bottom: 70px;
+box-shadow: 2px 0px 9px #888888;
+background-color: rgba(148, 148, 148, 0.033);
+}
+
+th, td {
+    padding-top: 10px;
+    padding-bottom: 20px;
+    padding-left: 160px;
+    padding-right: 140px;
+  }
+.heading{
+    text-align: justify;
+    font-family: sans-serif;
+    font-size: 22px;
+    background-color: rgba(91, 91, 91, 0.388);
+}
+td{
+    font-size: 20px;
+    font-family: sans-serif;
+    font-weight:400;
+    border-bottom: 1px solid #eeeeeeb1;
+ 
+
+
+
+
+}
